@@ -1,3 +1,7 @@
+2007-12-30  Stéphane Charette  <stephanecharette@gmail.com>
+	* src/ReportBase/_GraphvizReportDialog.py: write out the .dot file
+	using ISO-8859 instead of UTF-8 (allows for things like accented chars)
+
 2007-12-30  Raphael Ackermann <raphael.ackermann@gmail.com>
 	* src/docgen/HtmlDoc.py: Fix undefined variables.
 
